--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         </plugins>
     </build>
 
-<distributionManagement>
+<!-- <distributionManagement>
     <repository>
       <id>deployment</id>
       <name>Internal Release</name>
@@ -36,6 +36,6 @@
       <name>Internal Snapshot Release</name>
       <url>http://13.126.119.70:8081/repository/SAMPLE-SNAP/</url>
     </snapshotRepository>
-  </distributionManagement>
+  </distributionManagement> -->
 
 </project>
